--- a/notebooks/Notebook 02.ipynb
+++ b/notebooks/Notebook 02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 70,
    "id": "85f1dd2b",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
        "4       1             Tim Key         17      3.4            0.2018"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 71,
    "id": "663372b0",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 72,
    "id": "41f2cff5",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 78,
    "id": "cbc660c5",
    "metadata": {},
    "outputs": [
@@ -187,8 +187,8 @@
       "Baseline RMSE: 0.018\n",
       "\n",
       "Explanation:\n",
-      "On average, this means that predictions made using a basic model are off by approx Baseline MAE: 0.015 percentage points\n",
-      "Or using Baseline RMSE (more sensitive to larger errors): 0.018 percentage points\n"
+      "On average, this means that predictions made using a basic model are off by approx Baseline MAE: 1.5% percentage points\n",
+      "Or using Baseline RMSE (more sensitive to larger errors): 1.8% percentage points\n"
      ]
     }
    ],
@@ -227,12 +227,15 @@
     "# Print the baseline error metrics, rounded to three decimal places.\n",
     "# These values tell us how well our very basic model (using averages) performs.\n",
     "\n",
+    "mae_baseline_format = (mae_baseline * 100).round(1).astype(str) + \"%\"\n",
+    "rmse_baseline_format = (rmse_baseline * 100).round(1).astype(str) + \"%\"\n",
+    "\n",
     "print(f\"Baseline MAE: {mae_baseline:.3f}\")\n",
     "print(f\"Baseline RMSE: {rmse_baseline:.3f}\")\n",
     "\n",
     "print(\"\\nExplanation:\")\n",
-    "print(f\"On average, this means that predictions made using a basic model are off by approx Baseline MAE: {mae_baseline:.3f} percentage points\")\n",
-    "print(f\"Or using Baseline RMSE (more sensitive to larger errors): {rmse_baseline:.3f} percentage points\")\n"
+    "print(f\"On average, this means that predictions made using a basic model are off by approx Baseline MAE: {mae_baseline_format} percentage points\")\n",
+    "print(f\"Or using Baseline RMSE (more sensitive to larger errors): {rmse_baseline_format} percentage points\")\n"
    ]
   },
   {
