--- a/notebooks/Notebook 01.ipynb
+++ b/notebooks/Notebook 01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "ae76bc1c",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "ff0712e3",
    "metadata": {},
    "outputs": [
@@ -270,6 +270,8 @@
        "      <th>Contestant</th>\n",
        "      <th>Score After Ep 1</th>\n",
        "      <th>PPT Score After Ep 1</th>\n",
+       "      <th>Score After Ep 2</th>\n",
+       "      <th>PPT Score After Ep 2</th>\n",
        "      <th>Percentage of Total Points Won</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -280,6 +282,8 @@
        "      <td>Frank Skinner</td>\n",
        "      <td>19</td>\n",
        "      <td>3.8</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2.8</td>\n",
        "      <td>21.33%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -288,6 +292,8 @@
        "      <td>Josh Widdicombe</td>\n",
        "      <td>13</td>\n",
        "      <td>2.6</td>\n",
+       "      <td>29</td>\n",
+       "      <td>2.9</td>\n",
        "      <td>21.56%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -296,6 +302,8 @@
        "      <td>Roisin Conaty</td>\n",
        "      <td>7</td>\n",
        "      <td>1.4</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2.8</td>\n",
        "      <td>15.60%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -304,6 +312,8 @@
        "      <td>Romesh Ranganathan</td>\n",
        "      <td>19</td>\n",
        "      <td>3.8</td>\n",
+       "      <td>33</td>\n",
+       "      <td>3.3</td>\n",
        "      <td>21.33%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -312,6 +322,8 @@
        "      <td>Tim Key</td>\n",
        "      <td>17</td>\n",
        "      <td>3.4</td>\n",
+       "      <td>35</td>\n",
+       "      <td>3.5</td>\n",
        "      <td>20.18%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -326,26 +338,29 @@
        "3       1  Romesh Ranganathan                19                   3.8   \n",
        "4       1             Tim Key                17                   3.4   \n",
        "\n",
-       "  Percentage of Total Points Won  \n",
-       "0                         21.33%  \n",
-       "1                         21.56%  \n",
-       "2                         15.60%  \n",
-       "3                         21.33%  \n",
-       "4                         20.18%  "
+       "   Score After Ep 2  PPT Score After Ep 2 Percentage of Total Points Won  \n",
+       "0                28                   2.8                         21.33%  \n",
+       "1                29                   2.9                         21.56%  \n",
+       "2                28                   2.8                         15.60%  \n",
+       "3                33                   3.3                         21.33%  \n",
+       "4                35                   3.5                         20.18%  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Select which columns are staying in the model - keep it SIMPLE.\n",
-    "# The aim is to predict contestants’ final series performance using only first-episode results\n",
+    "# The aim is to predict contestants’ final series performance using only first-episode results \n",
+    "# (keeping in 2nd episode results for later workings)\n",
     "columns_to_keep = [\"Series\",\n",
     "    \"Contestant\",\n",
     "    \"Score After Ep 1\",\n",
     "    \"PPT Score After Ep 1\",\n",
+    "    \"Score After Ep 2\",\n",
+    "    \"PPT Score After Ep 2\",\n",
     "    \"Percentage of Total Points Won\"]\n",
     "\n",
     "df_model = df[columns_to_keep].copy()\n",
@@ -355,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "34b7b4fb",
    "metadata": {},
    "outputs": [
@@ -384,6 +399,8 @@
        "      <th>Contestant</th>\n",
        "      <th>score_ep1</th>\n",
        "      <th>ppt_ep1</th>\n",
+       "      <th>score_ep2</th>\n",
+       "      <th>ppt_ep2</th>\n",
        "      <th>final_pct_points</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -394,6 +411,8 @@
        "      <td>Frank Skinner</td>\n",
        "      <td>19</td>\n",
        "      <td>3.8</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2.8</td>\n",
        "      <td>21.33%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -402,6 +421,8 @@
        "      <td>Josh Widdicombe</td>\n",
        "      <td>13</td>\n",
        "      <td>2.6</td>\n",
+       "      <td>29</td>\n",
+       "      <td>2.9</td>\n",
        "      <td>21.56%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -410,6 +431,8 @@
        "      <td>Roisin Conaty</td>\n",
        "      <td>7</td>\n",
        "      <td>1.4</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2.8</td>\n",
        "      <td>15.60%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -418,6 +441,8 @@
        "      <td>Romesh Ranganathan</td>\n",
        "      <td>19</td>\n",
        "      <td>3.8</td>\n",
+       "      <td>33</td>\n",
+       "      <td>3.3</td>\n",
        "      <td>21.33%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -426,6 +451,8 @@
        "      <td>Tim Key</td>\n",
        "      <td>17</td>\n",
        "      <td>3.4</td>\n",
+       "      <td>35</td>\n",
+       "      <td>3.5</td>\n",
        "      <td>20.18%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -433,15 +460,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   Series          Contestant  score_ep1  ppt_ep1 final_pct_points\n",
-       "0       1       Frank Skinner         19      3.8           21.33%\n",
-       "1       1     Josh Widdicombe         13      2.6           21.56%\n",
-       "2       1       Roisin Conaty          7      1.4           15.60%\n",
-       "3       1  Romesh Ranganathan         19      3.8           21.33%\n",
-       "4       1             Tim Key         17      3.4           20.18%"
+       "   Series          Contestant  score_ep1  ppt_ep1  score_ep2  ppt_ep2  \\\n",
+       "0       1       Frank Skinner         19      3.8         28      2.8   \n",
+       "1       1     Josh Widdicombe         13      2.6         29      2.9   \n",
+       "2       1       Roisin Conaty          7      1.4         28      2.8   \n",
+       "3       1  Romesh Ranganathan         19      3.8         33      3.3   \n",
+       "4       1             Tim Key         17      3.4         35      3.5   \n",
+       "\n",
+       "  final_pct_points  \n",
+       "0           21.33%  \n",
+       "1           21.56%  \n",
+       "2           15.60%  \n",
+       "3           21.33%  \n",
+       "4           20.18%  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,6 +485,8 @@
     "df_model = df_model.rename(columns={\n",
     "    \"Score After Ep 1\": \"score_ep1\",\n",
     "    \"PPT Score After Ep 1\": \"ppt_ep1\",\n",
+    "    \"Score After Ep 2\": \"score_ep2\",\n",
+    "    \"PPT Score After Ep 2\": \"ppt_ep2\",\n",
     "    \"Percentage of Total Points Won\": \"final_pct_points\"})\n",
     "\n",
     "df_model.head()"
@@ -458,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "bdcc6ad2",
    "metadata": {},
    "outputs": [
@@ -468,16 +504,18 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 100 entries, 0 to 99\n",
-      "Data columns (total 5 columns):\n",
+      "Data columns (total 7 columns):\n",
       " #   Column            Non-Null Count  Dtype  \n",
       "---  ------            --------------  -----  \n",
       " 0   Series            100 non-null    int64  \n",
       " 1   Contestant        100 non-null    object \n",
       " 2   score_ep1         100 non-null    int64  \n",
       " 3   ppt_ep1           100 non-null    float64\n",
-      " 4   final_pct_points  100 non-null    object \n",
-      "dtypes: float64(1), int64(2), object(2)\n",
-      "memory usage: 4.0+ KB\n"
+      " 4   score_ep2         100 non-null    int64  \n",
+      " 5   ppt_ep2           100 non-null    float64\n",
+      " 6   final_pct_points  100 non-null    object \n",
+      "dtypes: float64(2), int64(3), object(2)\n",
+      "memory usage: 5.6+ KB\n"
      ]
     },
     {
@@ -487,11 +525,13 @@
        "Contestant          0\n",
        "score_ep1           0\n",
        "ppt_ep1             0\n",
+       "score_ep2           0\n",
+       "ppt_ep2             0\n",
        "final_pct_points    0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "70823f6f",
    "metadata": {},
    "outputs": [
@@ -534,6 +574,8 @@
        "      <th>Contestant</th>\n",
        "      <th>score_ep1</th>\n",
        "      <th>ppt_ep1</th>\n",
+       "      <th>score_ep2</th>\n",
+       "      <th>ppt_ep2</th>\n",
        "      <th>final_pct_points</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -544,6 +586,8 @@
        "      <td>Frank Skinner</td>\n",
        "      <td>19</td>\n",
        "      <td>3.8</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2.8</td>\n",
        "      <td>0.2133</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -552,6 +596,8 @@
        "      <td>Josh Widdicombe</td>\n",
        "      <td>13</td>\n",
        "      <td>2.6</td>\n",
+       "      <td>29</td>\n",
+       "      <td>2.9</td>\n",
        "      <td>0.2156</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -560,6 +606,8 @@
        "      <td>Roisin Conaty</td>\n",
        "      <td>7</td>\n",
        "      <td>1.4</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2.8</td>\n",
        "      <td>0.1560</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -568,6 +616,8 @@
        "      <td>Romesh Ranganathan</td>\n",
        "      <td>19</td>\n",
        "      <td>3.8</td>\n",
+       "      <td>33</td>\n",
+       "      <td>3.3</td>\n",
        "      <td>0.2133</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -576,6 +626,8 @@
        "      <td>Tim Key</td>\n",
        "      <td>17</td>\n",
        "      <td>3.4</td>\n",
+       "      <td>35</td>\n",
+       "      <td>3.5</td>\n",
        "      <td>0.2018</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -583,15 +635,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   Series          Contestant  score_ep1  ppt_ep1  final_pct_points\n",
-       "0       1       Frank Skinner         19      3.8            0.2133\n",
-       "1       1     Josh Widdicombe         13      2.6            0.2156\n",
-       "2       1       Roisin Conaty          7      1.4            0.1560\n",
-       "3       1  Romesh Ranganathan         19      3.8            0.2133\n",
-       "4       1             Tim Key         17      3.4            0.2018"
+       "   Series          Contestant  score_ep1  ppt_ep1  score_ep2  ppt_ep2  \\\n",
+       "0       1       Frank Skinner         19      3.8         28      2.8   \n",
+       "1       1     Josh Widdicombe         13      2.6         29      2.9   \n",
+       "2       1       Roisin Conaty          7      1.4         28      2.8   \n",
+       "3       1  Romesh Ranganathan         19      3.8         33      3.3   \n",
+       "4       1             Tim Key         17      3.4         35      3.5   \n",
+       "\n",
+       "   final_pct_points  \n",
+       "0            0.2133  \n",
+       "1            0.2156  \n",
+       "2            0.1560  \n",
+       "3            0.2133  \n",
+       "4            0.2018  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "a4c6d23e",
    "metadata": {},
    "outputs": [
