--- a/notebooks/Notebook 03.ipynb
+++ b/notebooks/Notebook 03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "b37ae589",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "e7d0674e",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
        "4            0.2018  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "9fe1e5d6",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "45fc7752",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "424a8b69",
    "metadata": {},
    "outputs": [],
@@ -211,6 +211,7 @@
     "\n",
     "    mae = mean_absolute_error(y_test, y_pred_norm)\n",
     "    rmse = mean_squared_error(y_test, y_pred_norm, squared=False)\n",
+    "    \n",
     "\n",
     "    return {\n",
     "        \"features\": features,\n",
@@ -224,7 +225,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
+   "id": "fceeecb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_placement_table(results, label):\n",
+    "    \"\"\"\n",
+    "    Build placement comparison table for a given model result.\n",
+    "    \"\"\"\n",
+    "    placement_df = df.loc[test_idx, [\n",
+    "        \"Contestant\",\n",
+    "        \"Series\",\n",
+    "        target\n",
+    "    ]].copy()\n",
+    "\n",
+    "    placement_df[\"actual\"] = results[\"y_test\"].values\n",
+    "    placement_df[\"predicted\"] = results[\"y_pred\"].values\n",
+    "    placement_df[\"model\"] = label\n",
+    "\n",
+    "    # actual placement\n",
+    "    placement_df[\"actual_placement\"] = (\n",
+    "        placement_df\n",
+    "        .groupby(\"Series\")[\"actual\"]\n",
+    "        .rank(ascending=False, method=\"min\")\n",
+    "        .astype(int)\n",
+    "    )\n",
+    "\n",
+    "    # predicted placement\n",
+    "    placement_df[\"predicted_placement\"] = (\n",
+    "        placement_df\n",
+    "        .groupby(\"Series\")[\"predicted\"]\n",
+    "        .rank(ascending=False, method=\"min\")\n",
+    "        .astype(int)\n",
+    "    )\n",
+    "\n",
+    "    placement_df[\"placement_error\"] = (\n",
+    "        placement_df[\"predicted_placement\"]\n",
+    "        - placement_df[\"actual_placement\"]\n",
+    "    )\n",
+    "\n",
+    "    return placement_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "64037b77",
    "metadata": {},
    "outputs": [],
@@ -236,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "a5076f99",
    "metadata": {},
    "outputs": [
@@ -289,7 +335,7 @@
        "1  Episode 1 + Episode 2  0.011432  0.014617"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "2aed684d",
    "metadata": {},
    "outputs": [
@@ -336,7 +382,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
+   "id": "4a10667f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean absolute placement error (Ep 1 + 2): 1.05\n",
+      "Exact placement matches (Ep 1 + 2): 9 out of 20\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Mean abs placement error</th>\n",
+       "      <th>Exact matches</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Episode 1 only</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Episode 1 + Episode 2</td>\n",
+       "      <td>1.05</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Model  Mean abs placement error  Exact matches\n",
+       "0         Episode 1 only                      0.90             11\n",
+       "1  Episode 1 + Episode 2                      1.05              9"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Build placement tables\n",
+    "placement_ep1 = build_placement_table(results_ep1, \"Episode 1 only\")\n",
+    "placement_ep2 = build_placement_table(results_ep2, \"Episode 1 + Episode 2\")\n",
+    "\n",
+    "placement_table_ep2 = placement_ep2[[\n",
+    "    \"Contestant\",\n",
+    "    \"Series\",\n",
+    "    \"actual\",\n",
+    "    \"predicted\",\n",
+    "    \"actual_placement\",\n",
+    "    \"predicted_placement\",\n",
+    "    \"placement_error\"\n",
+    "]].sort_values(by=[\"Series\", \"actual_placement\"])\n",
+    "\n",
+    "placement_table_ep2\n",
+    "\n",
+    "mean_abs_placement_error = placement_ep2[\"placement_error\"].abs().mean()\n",
+    "exact_matches = (placement_ep2[\"placement_error\"] == 0).sum()\n",
+    "\n",
+    "print(f\"Mean absolute placement error (Ep 1 + 2): {mean_abs_placement_error:.2f}\")\n",
+    "print(f\"Exact placement matches (Ep 1 + 2): {exact_matches} out of {len(placement_ep2)}\")\n",
+    "\n",
+    "summary = pd.DataFrame({\n",
+    "    \"Model\": [\"Episode 1 only\", \"Episode 1 + Episode 2\"],\n",
+    "    \"Mean abs placement error\": [\n",
+    "        placement_ep1[\"placement_error\"].abs().mean(),\n",
+    "        placement_ep2[\"placement_error\"].abs().mean()\n",
+    "    ],\n",
+    "    \"Exact matches\": [\n",
+    "        (placement_ep1[\"placement_error\"] == 0).sum(),\n",
+    "        (placement_ep2[\"placement_error\"] == 0).sum()\n",
+    "    ]\n",
+    "})\n",
+    "\n",
+    "summary\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "19c3ca38",
    "metadata": {},
    "outputs": [
@@ -368,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "5977822f",
    "metadata": {},
    "outputs": [
@@ -430,7 +583,7 @@
        "3    ppt_ep2     0.016490"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
